--- a/locales/en.json
+++ b/locales/en.json
@@ -33,7 +33,8 @@
     "minutes_one": "{{count}} minute",
     "minutes_other": "{{count}} minutes",
     "hours_one": "{{count}} hour",
-    "hours_other": "{{count}} hours"
+    "hours_other": "{{count}} hours",
+    "share": "Share"
   },
   "queue": {
     "title": "Queue",
@@ -76,7 +77,8 @@
         "system": "System language",
         "en": "English",
         "ja": "Japanese"
-      }
+      },
+      "keepScreenOn": "Keep screen on"
     }
   }
 }
