--- a/locales/ja.json
+++ b/locales/ja.json
@@ -33,7 +33,8 @@
     "minutes_one": "{{value}}分",
     "minutes_other": "{{value}}分",
     "hours_one": "{{value}}時間",
-    "hours_other": "{{value}}時間"
+    "hours_other": "{{value}}時間",
+    "share": "共有"
   },
   "queue": {
     "title": "キュー",
@@ -76,7 +77,8 @@
         "system": "システム言語",
         "en": "英語",
         "ja": "日本語"
-      }
+      },
+      "keepScreenOn": "画面をオンに保つ"
     }
   }
 }
