--- a/locales/ja.json
+++ b/locales/ja.json
@@ -34,7 +34,9 @@
     "minutes_other": "{{value}}分",
     "hours_one": "{{value}}時間",
     "hours_other": "{{value}}時間",
-    "share": "共有"
+    "share": "共有",
+    "like": "好き",
+    "dislike": "嫌い"
   },
   "queue": {
     "title": "キュー",
