feat: add update-related messages to localization files

--- a/locales/en.json
+++ b/locales/en.json
@@ -84,12 +84,20 @@
         "en": "English",
         "ja": "Japanese"
       },
-      "keepScreenOn": "Keep screen on"
+      "keepScreenOn": "Keep screen on",
+      "checkForUpdatesOnAppStart": "Check for updates on app start"
     }
   },
   "about": {
     "title": "About",
     "checkForUpdates": "Check for updates",
+    "checkingForUpdates": "Checking for updates...",
+    "upToDate": "Up to date",
+    "updateAvailable": "An update is available",
+    "updateAvailableDescription": "Tap to download and install",
+    "updateAvailableLong": "Update available. Tap to download and install.",
+    "downloadingUpdate": "Downloading update ({{progress}}%)...",
+    "errorCheckingForUpdates": "Error checking for updates. Tap to retry.",
     "webVersion": "Web version",
     "changelog": "Changelog",
     "license": "License"
