feat: add more actions accessibility label

--- a/locales/en.json
+++ b/locales/en.json
@@ -30,6 +30,7 @@
     "nothingIsPlayingMessage": "Play something on YouTube Music to control it from here.",
     "minimizePlayer": "Minimize player",
     "maximizePlayer": "Maximize player",
+    "moreActions": "More actions",
     "sleepTimer": "Sleep timer",
     "addFiveMinutes": "Add 5 minutes",
     "cancelTimer": "Cancel timer",
