--- a/locales/ja.json
+++ b/locales/ja.json
@@ -30,6 +30,7 @@
     "nothingIsPlayingMessage": "ここからコントロールするには、YouTube Musicで何かを再生してください。",
     "minimizePlayer": "プレーヤーを最小化",
     "maximizePlayer": "プレーヤーを最大化",
+    "moreActions": "その他のアクション",
     "sleepTimer": "スリープタイマー",
     "addFiveMinutes": "5分追加",
     "cancelTimer": "タイマーをキャンセル",
