fix(i18n): update pluralization keys in Japanese locale

--- a/locales/ja.json
+++ b/locales/ja.json
@@ -34,10 +34,10 @@
     "sleepTimer": "スリープタイマー",
     "addFiveMinutes": "5分追加",
     "cancelTimer": "タイマーをキャンセル",
-    "minutes_one": "{{value}}分",
-    "minutes_other": "{{value}}分",
-    "hours_one": "{{value}}時間",
-    "hours_other": "{{value}}時間",
+    "minutes_one": "{{count}}分",
+    "minutes_other": "{{count}}分",
+    "hours_one": "{{count}}時間",
+    "hours_other": "{{count}}時間",
     "share": "共有",
     "like": "好き",
     "dislike": "嫌い"
