feat: repeat mode in player controls

--- a/locales/en.json
+++ b/locales/en.json
@@ -20,7 +20,9 @@
     "playPrevious": "Play previous track",
     "playNext": "Play next track",
     "toggleShuffle": "Toggle shuffle",
-    "switchRepeat": "Switch between repeat modes",
+    "repeatOff": "Repeat off",
+    "repeatAll": "Repeat all",
+    "repeatOne": "Repeat one",
     "mute": "Mute",
     "unmute": "Unmute",
     "adjustVolume": "Adjust volume",
