--- a/locales/ja.json
+++ b/locales/ja.json
@@ -23,7 +23,9 @@
     "mute": "ミュート",
     "unmute": "ミュート解除",
     "adjustVolume": "音量調整",
-    "switchRepeat": "リピートモードを切り替え",
+    "repeatOff": "リピートオフ",
+    "repeatAll": "全曲リピート",
+    "repeatOne": "1曲リピート",
     "enterFullScreen": "全画面表示",
     "exitFullScreen": "全画面を終了",
     "nothingIsPlaying": "再生中の曲はありません",
