--- a/locales/ja.json
+++ b/locales/ja.json
@@ -105,5 +105,16 @@
     "webVersion": "Webバージョン",
     "changelog": "変更履歴",
     "license": "ライセンス"
+  },
+  "search": {
+    "title": "検索",
+    "searchPlaceholder": "曲、アルバム、アーティストを検索",
+    "noResults": "結果が見つかりません",
+    "noResultsMessage": "他のものを検索してみてください。",
+    "errorMessage": "検索中にエラーが発生しました。もう一度お試しください。",
+    "unknownArtist": "不明なアーティスト",
+    "moreActions": "その他のアクション",
+    "addToQueue": "キューに追加",
+    "playNext": "次に再生"
   }
 }
