--- a/locales/en.json
+++ b/locales/en.json
@@ -49,7 +49,10 @@
     "unknownTitle": "Unknown title",
     "unknownArtist": "Unknown artist",
     "nothingIsInQueue": "Nothing is in queue",
-    "nothingIsInQueueMessage": "Play something on YouTube Music to see it here."
+    "nothingIsInQueueMessage": "Play something on YouTube Music to see it here.",
+    "addToQueue": "Add to queue",
+    "playNext": "Play next",
+    "removeFromQueue": "Remove from queue"
   },
   "settings": {
     "title": "Settings",
@@ -113,8 +116,6 @@
     "noResultsMessage": "Try searching for something else.",
     "errorMessage": "An error occurred while searching. Please try again.",
     "unknownArtist": "Unknown artist",
-    "moreActions": "More actions",
-    "addToQueue": "Add to queue",
-    "playNext": "Play next"
+    "moreActions": "More actions"
   }
 }
