--- a/locales/ja.json
+++ b/locales/ja.json
@@ -49,7 +49,10 @@
     "unknownTitle": "不明なタイトル",
     "unknownArtist": "不明なアーティスト",
     "nothingIsInQueue": "キューには何もありません",
-    "nothingIsInQueueMessage": "ここに表示するには、YouTube Musicで何かを再生してください。"
+    "nothingIsInQueueMessage": "ここに表示するには、YouTube Musicで何かを再生してください。",
+    "addToQueue": "キューに追加",
+    "playNext": "次に再生",
+    "removeFromQueue": "キューから削除"
   },
   "settings": {
     "title": "設定",
@@ -113,8 +116,6 @@
     "noResultsMessage": "他のものを検索してみてください。",
     "errorMessage": "検索中にエラーが発生しました。もう一度お試しください。",
     "unknownArtist": "不明なアーティスト",
-    "moreActions": "その他のアクション",
-    "addToQueue": "キューに追加",
-    "playNext": "次に再生"
+    "moreActions": "その他のアクション"
   }
 }
